fix: Make modal overflow properly on mobile

--- a/megamod.css
+++ b/megamod.css
@@ -58,15 +58,16 @@
 	display: grid;
     grid-area: content;
 	grid-template-areas: "header header header" "sidebar body helpbox";
-	grid-template-columns: 1fr 3fr 3fr;
+	grid-template-columns: 1fr 2fr 2fr;
     grid-template-rows: min-content auto;
 }
 /* Small devices (landscape phones, 576px and below) */
 @media (max-width: 576px) {
 	.megamod-settings-modal-content {
-		grid-template-areas: "header header header" "sidebar sidebar sidebar" "body body body" "helpbox helpbox helpbox";
-		grid-template-columns: 1fr 1fr 1fr;
-		grid-template-rows: auto auto auto auto;
+		grid-template-areas: "header" "sidebar" "body" "helpbox";
+		grid-template-columns: 1fr;
+		grid-template-rows: min-content min-content min-content min-content;
+        overflow: auto;
 	}
 }
 
@@ -186,6 +187,7 @@
 	grid-area: helpbox;
 	opacity: 0;
 	color: var(--kbin-meta-text-color);
+    margin-top: 1rem;
 }
 
 .megamod-settings-modal-body label:hover .description {
